Avoid having 'Verify using OpenPGP' look too much like a step
Being an <h2> it now has the same style as 'Direct download' and
'BitTorrent' download which sound right.

--- a/wiki/src/install/inc/stylesheets/dave_2.css
+++ b/wiki/src/install/inc/stylesheets/dave_2.css
@@ -35,10 +35,6 @@ h1 {
   opacity: 0.3;
 }
 
-#openpgp {
-  display: block !important;
-}
-
 /* Layout */
 
 #content {
@@ -112,4 +108,14 @@ span.step-number {
   color: #e8112d;
   border-color: #e9112f;
   border-size: 2px;
+}
+
+/* OpenPGP */
+
+#openpgp {
+  margin-top: 5em;
+}
+
+#openpgp h3 {
+  margin-top: 3em;
 }
